--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "config": "^3.3.1",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
+    "faker": "^4.1.0",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
