--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Dominik Hruza",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.1",
     "express": "^4.17.1",
@@ -21,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
+    "react-router-dom": "^5.2.0",
     "uuid": "^7.0.3"
   },
   "devDependencies": {
