--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Dominik Hruza",
   "license": "ISC",
   "dependencies": {
+    "@types/uuid": "^8.0.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.1",
