--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "author": "Dominik Hruza",
   "license": "ISC",
   "dependencies": {
+    "@types/faker": "^4.1.12",
     "@types/uuid": "^8.0.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^4.5.0",
+    "bs-custom-file-input": "^1.3.4",
     "config": "^3.3.1",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
@@ -23,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
+    "react-bootstrap": "^1.0.1",
     "react-router-dom": "^5.2.0",
     "uuid": "^7.0.3"
   },
