--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "faker": "^4.1.0",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.27.0",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "uuid": "^7.0.3"
